refactor: aplicar correcoes de qualidade identificadas na analise
- Corrige Locale deprecated (Java 21): new Locale() -> Locale.of()
- Renomeia PromocaoPesoLeve -> PromocaoReducaoPeso (nome semanticamente correto)
- Adiciona construtor privado em CalculadoraFreteFactory (classe utilitaria)
- Remove dead code criador==null da factory e o teste reflection associado
- Adiciona delegacao padrao calcular() em CalculadoraFreteDecorator
- Adiciona metodo comPeso() ao record Entrega para copia imutavel com peso modificado
- Remove System.out.println dos testes
- Padroniza nomes de testes para estilo BDD (deveXxx / naoDeveXxx)
- Adiciona teste de boundary para FreteEconomico com peso == limite de isencao

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>